--- a/TodoList.html
+++ b/TodoList.html
@@ -24,6 +24,7 @@
                         My <span class="todo-items-heading-subpart">Tasks</span>
                     </h1>
                     <ul class="todo-items-container" id="todoItemsContainer"></ul>
+                    <button id="saveButton" class="btn btn-primary mt-3">Save</button>
                 </div>
             </div>
         </div>
